# DockerLab

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20241222124520_create_users.up.sql
src/: main.rs  models.rs  service.rs
