[package]
name = "dockerapp"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = 'abort'

[dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-async-std-rustls",
    "macros",
] }
dotenv = "0.15"
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
